[package]
name = "kuznechik"
version = "0.3.0"
edition = "2018"

authors = ["dmixn <dmixn@yandex.ru>"]
description = "Synchronous encryption algorithm \"Kuznechik\" (GOST R 34.12-2015, GOST R 34.13-2015)"
license = "LGPL-2.1-or-later"
repository = "https://github.com/DmitryNX/Kuznechik"

[dependencies]
sha3 = "0.10.8"
